--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>TypeScript Sandbox</h1>
+      <h1>Módulo 2 - Tipos de datos y operadores</h1>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
